# vector_ann

./: CMakeLists.txt  README  README.md
cmake/: CMakeLists.txt
include/: .vector_ann.h.swp  vector_ann.h
lib/: .CMakeLists.txt.swp  .vector_ann.c.swp  CMakeLists.txt  vector_ann.c
tests/: CMakeLists.txt  qa_backward_propagation.c  qa_forward_propagation.c  qa_full_training.c  qa_init.c  qa_train.c  qa_train_cycle.c
